Fix container alignment on Prime Video

--- a/client/src/js/content/show-connect-form.css
+++ b/client/src/js/content/show-connect-form.css
@@ -1,11 +1,12 @@
 #fuemschaun-container {
     /* Position fixed on bottom */
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
     height: auto;
     z-index: 2147483647;
     /* Normalize styling */
+    display: block;
     box-sizing: border-box;
     padding: 20px;
     color: black;
